<resources>
    <string name="app_name">HAVIT</string>
    <string name="title_profile">Profile</string>
    <string name="title_camera">Camera</string>
    <string name="title_timeline">Timeline</string>
    <string name="login_name">Name</string>
    <string name="login_name_text_field">Name</string>
    <string name="login_username_text_field">Username</string>
    <string name="login_password_text_field">Password</string>
    <string name="login_submit_button">Get Started</string>
    <string name="title_habit">New Habit</string>
    <string name="button_capture">Capture</string>
    <string name="add_habit_btn">Add New Habit</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_input_name">Name</string>
    <string name="title_new_habit">New Habit</string>
    <string name="placeholder_description">Description</string>
    <string name="default_word_count">0</string>
    <string name="login_password_toggle">toggle</string>
    <string name="get_started_text">HAVIT</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="title_store">Templates</string>
</resources>