<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_camera">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.havit.app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profile_to_camera"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_profile_to_timeline"
            app:destination="@id/navigation_timeline" />
    </fragment>

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.havit.app.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_camera_to_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_camera_to_timeline"
            app:destination="@id/navigation_timeline" />
    </fragment>

    <fragment
        android:id="@+id/navigation_timeline"
        android:name="com.havit.app.ui.timeline.TimelineFragment"
        android:label="@string/title_timeline"
        tools:layout="@layout/fragment_timeline" >
        <action
            android:id="@+id/action_timeline_to_camera"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_timeline_to_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_timeline_to_habit"
            app:destination="@id/navigation_habit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_habit"
        android:name="com.havit.app.ui.habit.HabitFragment"
        android:label="@string/title_habit"
        tools:layout="@layout/fragment_habit" >
        <action
            android:id="@+id/action_habit_to_camera"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_habit_to_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_habit_to_timeline"
            app:destination="@id/navigation_timeline" />
        <action
            android:id="@+id/action_habit_to_store"
            app:destination="@id/navigation_store" />
    </fragment>

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.havit.app.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" >
        <action
            android:id="@+id/action_store_to_camera"
            app:destination="@id/navigation_camera" />
        <action
            android:id="@+id/action_store_to_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_store_to_timeline"
            app:destination="@id/navigation_timeline" />
        <action
            android:id="@+id/action_store_to_habit"
            app:destination="@id/navigation_habit" />
    </fragment>
</navigation>